[2.9.1]
    - Menu font size can now be changed again. Help contents are also enlarged accordingly. Fixes bug 1122.
    - Importing of entries works again. Fixes bug 1121.
    - Import inspection dialog is now modal.
    - Replaced Java launcher by launch4j. Fixes bugs 1100, 1103.
2.9
    - Fixed bug: in OO/LO reference lists, entries may fall out when multiple entries with same
      author and year are cited.
    - Added support for converting HTML combining accents to LaTeX
    - When generating subdatabase from AUX file, preamble and strings are now included from
      the source database.
    - Added cleanup action for removing redundant $, {, and }
    - Fix for removing starting and ending spaces in the page number cleanup action
    - Fix for a more liberal detection in the month cleanup action
2.9 beta 2
    - Added DiVA fetcher
    - Can control if the HTML converter should create subscripts and superscripts
      as text or an equation via the preferences
    - Added initial support for adding curly brackets {} for certain
      key words to keep the character case independent of .bst, e.g., for
      names and abbreviations (use via "Cleanup entries") and can be controlled 
      via preferences if it should be used at searches
    - Fixed author and DOI import from IEEE Xplore 
    - Improved import of equations in IEEE Xplore titles handling images, (sub) and /spl / representations
    - Rewrote the HTML import in a more general way. A few characters need to be added.
    - IEEE Xplore abstract fetching should now be working again.
    - Added DOI to BibTex entry fetcher.
    - Added ADS (The SAO/NASA Astrophysics Data System) fetcher by Ryo Igarashi (patch #120).
    - Reintroduced Google Scholar and ACM portal fetcher with entry preview to reduce server load.
    - Added alternate entry fetcher type where a preview can be displayed so the user can choose